
*** CORE/CPU ***
Fixed a potential small problem with Bally VideoPins sound emulation
Added PWM segment support to System 11 games
Added PWM support to CFTBL backglass flashers
Added PWM lamps & solenoids support to Bally 6803 games
Added PWM lamps & solenoids support to Zaccaria games
Added PWM support to Alvin G. games

*** ROM SUPPORT *** Thanks to Tom Collins, Paul Swan, Dieter Werner, Victor Fernandez, Jordi Beltran, ipdb.org
Correct Dumps:
DE: Batman 1.06 (just using correct name for the display rom (1.02 instead of 1.06))

Clones:
Bad Cats LF-1 (French)
Bad Cats (The Cat's Meow) (MOD 1.2 & 1.3)
Cue Ball Wizard (Spanish / Vifico license)
Gorgar L-2 (unreleased so far, makes it the newest version available)
High Speed (G-4 aka German PROTO4)
Soccer Kings (alternate set 2)
Super Mario Bros. (Spanish / Vifico license) (rev.1 and (most likely) rev.2)
Transporter the Rescue L-3 (Fixed Jackpot MOD)
Victory (tournament/competition MOD 1.1 & 1.2 & 1.3)



Version 3.6 (January 29th, 2025) - "Sounds good III / Looks good"
------------------------------------------------------------------------------

"AltSound 2.0"
- Completely re-written AltSound (mode 1) processing
- Fixed existing bugs and regressions in the original AltSound code
- Compatible with all existing AltSound library formats
- New G-Sound library format.  Provides a new option for authors to develop
  immersive, multi-layered AltSound packages
- New AltSound configuration options via per-table .ini file
- Independent and configurable always-on AltSound logger
- Ability to record live game sound commands.  Useful for testing sounds without
  having to repeatedly create a live game.
- Ability to script game sound commands (currently dev only feature).  Useful
  for testing specific scenarios like mode progressions or sound mix behavior
  without having to create them in a live game
- Ability to playback recorded sound commands via standalone AltSound driver