@@ -19,7 +19,7 @@ Added PWM lamps & solenoids support to Bally 6803 games
 Added PWM lamps & solenoids support to Zaccaria games
 Added PWM support to Alvin G. games
 
-*** ROM SUPPORT *** Thanks to Tom Collins, Paul Swan, Dieter Werner, Victor Fernandez, Jordi Beltran, ipdb.org
+*** ROM SUPPORT *** Thanks to Tom Collins, Paul Swan, Dieter Werner, Victor Fernandez, Jordi Beltran, ipdb.org, Billc479, Scott Charles
 Correct Dumps:
 DE: Batman 1.06 (just using correct name for the display rom (1.02 instead of 1.06))
 
@@ -29,6 +29,7 @@ Bad Cats (The Cat's Meow) (MOD 1.2 & 1.3)
 Cue Ball Wizard (Spanish / Vifico license)
 Gorgar L-2 (unreleased so far, makes it the newest version available)
 High Speed (G-4 aka German PROTO4)
+Rolling Stones V21 (unreleased so far, makes it the newest version available)
 Soccer Kings (alternate set 2)
 Super Mario Bros. (Spanish / Vifico license) (rev.1 and (most likely) rev.2)
 Transporter the Rescue L-3 (Fixed Jackpot MOD)
